# mw_seimens_s7_plc_interface

./: CMakeLists.txt  README.md  package.xml
comm_check/: unit_tests.py
comm_check/scripts/: interface_check.py
launch/: plc_odom_interface.launch  remote_control.launch
lib/scripts/: S7_plc_lib.py
msg/: encoder_data.msg
odometry_caliberation/: 20201228_angle.bag  caliberation.py
odometry_caliberation/20201228_angle/: encoder_pub.csv
odometry_caliberation/20201228_linear/: encoder_pub.csv
ros_plc_interface/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros_plc_interface/devel/lib/pkgconfig/: plc_lib.pc  remote_teleop.pc
ros_plc_interface/devel/lib/python2.7/dist-packages/plc_lib/: __init__.py
ros_plc_interface/devel/lib/python3/dist-packages/plc_lib/: __init__.py
ros_plc_interface/devel/share/plc_lib/cmake/: plc_libConfig.cmake
ros_plc_interface/devel/share/remote_teleop/cmake/: remote_teleopConfig.cmake
ros_plc_interface/src/plc_lib/: CMakeLists.txt  package.xml
ros_plc_interface/src/plc_lib/src/plc_lib/: S7_plc_lib.py
ros_plc_interface/src/remote_teleop/: CMakeLists.txt
ros_plc_interface/src/remote_teleop/launch/: remote_control.launch
ros_plc_interface/src/remote_teleop/scripts/: teleop_plc.py
scripts/: interface_check.py  siemens_plc_controller.py
