<?xml version="1.0"?>
<package format="2">
  <name>plc_lib</name>
  <version>0.0.0</version>
  <description>The plc_lib package</description>
  <maintainer email="your@email.here">Ankur Bodhe</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>